<resources>
    <string name="app_name">CookFlex</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Log In</string>
    <string name="SignUp">Sign Up</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createEmail">Email Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="reg_success">Registration Successful! Please check your email verification.</string>
    <string name="reg_fail">There was an error occurred</string>
    <string name="profileSetting">Profile Setting</string>
    <string name="usernameTaken">This username is already taken</string>
    <string name="typeStep">Type your step here</string>
    <string name="culture">Culture</string>
    <string name="situation">Situation</string>
    <string name="method">Method</string>
    <string name="type">Type</string>
    <string name="main_ingredient">Main Ingredient</string>
    <string name="search_bar">Search Recipe, Ingredient and Usernames here</string>
<!--Profile Setting Activity-->
    <string name="notification_setting">Notification Setting</string>
    <string name="change_email">Change Email</string>
    <string name="change_nickname">Change Username</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_intro">Edit Intro</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Type \"<em>Delete my account</em>\" and tap submit button to completely delete your account</string>

    <string-array name="TimeOfDay">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Late-Night</item>
        <item>Brunch</item>
        <item>N/A</item>
    </string-array>

    <string-array name="types">
        <item>Main dish</item>
        <item>Side dish</item>
        <item>Soup</item>
        <item>Snacks</item>
        <item>Salad</item>
        <item>Sauce/Jam</item>
        <item>Beverage</item>
        <item>N/A</item>
    </string-array>

    <string-array name="materials">
        <item>Beef</item>
        <item>Pork</item>
        <item>Chicken</item>
        <item>Meat</item>
        <item>Vegetables</item>
        <item>Seafood</item>
        <item>Dairy</item>
        <item>Rice</item>
        <item>Fruits</item>
        <item>Beans</item>
        <item>Grain</item>
        <item>N/A</item>
    </string-array>

    <string-array name="method">
        <item>Stir</item>
        <item>Stir-fried</item>
        <item>Boiled</item>
        <item>Steamed</item>
        <item>Fried</item>
        <item>Baked</item>
        <item>N/A</item>
    </string-array>

    <string-array name="situation">
        <item>Vegan</item>
        <item>Daily Life</item>
        <item>Super Quick Meal</item>
        <item>For Guests</item>
        <item>Diet</item>
        <item>Bento Box</item>
        <item>Nutrient Dense</item>
        <item>Midnight Snack</item>
        <item>Holiday</item>
        <item>Baby Food</item>
        <item>N/A</item>
    </string-array>

    <string-array name="culture">
        <item>American</item>
        <item>Mexican</item>
        <item>Italian</item>
        <item>French</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>N/A</item>
    </string-array>

</resources>