<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></include>

    <EditText
        android:id="@+id/createuser"
        android:layout_width="387dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <EditText
        android:id="@+id/createpassword"
        android:layout_width="387dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createuser" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="387dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createpassword" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="387dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/createEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <Button
        android:id="@+id/register"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:onClick="Signup"
        android:text="@string/SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:onClick="backToLogin"
        android:text="Already Signed In?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>