<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="toSignUp"
            android:text="@string/SignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="Login"
            android:text="@string/Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainImageCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="185dp"
            android:layout_marginEnd="80dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mainImageCard"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="51dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>